fix files compressing